fix(invitation): i#3375 fix invitation list not fitting on the full container width

--- a/javascript/apps/taiga/src/app/shared/invite-to-project/invite-to-project.component.css
+++ b/javascript/apps/taiga/src/app/shared/invite-to-project/invite-to-project.component.css
@@ -132,7 +132,6 @@ Copyright (c) 2023-present Kaleidos INC
 
 tui-data-list {
   border: none;
-  max-inline-size: 463px;
 
   & .suggested-btn {
     justify-content: flex-start;
